Fix broken css syntax

--- a/Microblogging/app/assets/stylesheets/custom.css.scss
+++ b/Microblogging/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,8 @@ $gray-medium-light: #eaeaea;
 }
 
 
+
+
 /* forms */
 
 input, textarea, select, .uneditable-input {
@@ -64,6 +66,21 @@ aside {
   margin-top: 15px;
 }
 
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
 
 
 /* miscellaneous */
@@ -75,6 +92,8 @@ aside {
   margin-top: 45px;
   @include box_sizing;
 }
+
+
 /* universal */
 
 body {
